feature: Add file fav.ico and modific file index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ShonenStream - Streaming de Anime Shonen</title>
+    <meta name="description"
+        content="Disfruta de los mejores animes shonen en ShonenStream. Transmisión en línea de tus series favoritas con acción, aventura y emoción.">
+    <meta name="keywords"
+        content="ShonenStream, streaming de anime, anime shonen, ver anime online, acción, aventura, shoujo, seinen">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="icon" href="fav.ico">
+    <script src="https://kit.fontawesome.com/075f4952e7.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header class="header">
+        <picture>
+            <img src="/img/logo.png" alt="Logo de prueba" class="logo" width="300px">
+        </picture>
+        <div class="busqueda">
+            <input type="text" placeholder="¿Que quieres ver?">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+        <button type="button">Login</button>
+    </header>
+    <main class="principal">
+        <h1>Bienvenidos a ShonenStream</h1>
+        <section class="noticias">
+            <h2 class="title2">Alguna noticia</h2>
+            <picture class="noticia1">
+                <img src="#" alt="Noticia de algun anime">
+            </picture>
+            <p class="noti1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, mollitia doloremque.
+                Excepturi, esse! Quidem, voluptate ex! Ipsam, deserunt sequi ullam accusantium ipsa rerum mollitia
+                minima quasi, numquam labore molestiae voluptate.</p>
+        </section>
+    </main>
 </body>
+
 </html>
